--- a/rw1.html
+++ b/rw1.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
     <title>九宫格</title>
-  <style type="text/css">
-.Box {
-background-color: orange;
-border-radius: 20px;
-margin: 1.25%;
-float: left;
-height: 30vw;
-width: 30%;}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body >
 <div class="Box"></div>
